--- a/src/Tools/Source/CompilerGeneratorTools/Source/IOperationGenerator/CompilersIOperationGenerator.csproj
+++ b/src/Tools/Source/CompilerGeneratorTools/Source/IOperationGenerator/CompilersIOperationGenerator.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Roslyn.Compilers.Internal.IOperationGenerator</RootNamespace>
     <AssemblyName>IOperationGenerator</AssemblyName>
     <AutoGenerateBindingRedirects>True</AutoGenerateBindingRedirects>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>$(RoslynNetCoreTargetFramework)</TargetFramework>
     <IsShipping>false</IsShipping>
     <Nullable>enable</Nullable>
   </PropertyGroup>
