--- a/src/Tools/AnalyzerRunner/Properties/launchSettings.json
+++ b/src/Tools/AnalyzerRunner/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "IDE Analyzers": {
       "commandName": "Project",
-      "commandLineArgs": "$(OutDir) $(SolutionDir)Roslyn.sln /concurrent /stats /compilerStats CSharpSimplifyTypeNamesDiagnosticAnalyzer"
+      "commandLineArgs": "$(OutDir) $(SolutionDir)Roslyn.sln /concurrent /stats /compilerStats"
     },
     "CSharpEditorFeatures Analyzers": {
       "commandName": "Project",
