--- a/src/Compilers/Server/VBCSCompilerTests/VBCSCompiler.UnitTests.csproj
+++ b/src/Compilers/Server/VBCSCompilerTests/VBCSCompiler.UnitTests.csproj
@@ -29,8 +29,8 @@
     <ProjectReference Include="..\..\CSharp\Portable\Microsoft.CodeAnalysis.CSharp.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System" Condition="'$(TargetFramework)' != '$(RoslynNetCoreTargetFramework)'" />
-    <Reference Include="System.Xml" Condition="'$(TargetFramework)' != '$(RoslynNetCoreTargetFramework)'" />
+    <Reference Include="System" Condition="'$(TargetFramework)' != 'netcoreapp3.1'" />
+    <Reference Include="System.Xml" Condition="'$(TargetFramework)' != 'netcoreapp3.1'" />
     <PackageReference Include="Microsoft.DiaSymReader" Version="$(MicrosoftDiaSymReaderVersion)" />
     <PackageReference Include="Moq" Version="$(MoqVersion)" />
   </ItemGroup>
